--- a/sitio-web/c/index.html
+++ b/sitio-web/c/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de Bienvenida</title>
+    <link rel="stylesheet"  href="css/estilos.css">
 </head>
 <body>
+    <div class="bloque.grid">
     <header>
         <nav>
             <a href="index.html">Inicio</a>
@@ -29,5 +31,6 @@
     <footer>
         <p>@2025 Desarrollo Web Avanzado</p>
     </footer>
+    </div>
 </body>
 </html>
